--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -54,14 +54,14 @@ jobs:
 
           # MacOS packages.
           - runs-on:
-              - ${{ github.repository == 'openxla/iree' && 'self-hosted' || 'macos-11' }}
+              - self-hosted
               - os-family=macOS
               - runner-group=postsubmit
             build-family: macos
             build-package: py-compiler-pkg
             experimental: true
           - runs-on:
-              - ${{ github.repository == 'openxla/iree' && 'self-hosted' || 'macos-11' }}
+              - self-hosted
               - os-family=macOS
               - runner-group=postsubmit
             build-family: macos
